--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html class='v2' dir='ltr' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
+<head>
+<link href='https://www.blogger.com/static/v1/widgets/1667664774-css_bundle_v2.css' rel='stylesheet' type='text/css' />
 <meta content='width=device-width, initial-scale=1' name='viewport' />
 <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css' />
 <link href='https://use.fontawesome.com/releases/v5.15.4/css/all.css' rel='stylesheet' />
@@ -29,34 +33,20 @@
 <body>
 </div>
 </div></div>
-	
-
-<center><h2 style="color:#f1f1f1;">Sooka Sports</h2></center>
-
-
-<center><table style="width:100%">
-    <tr>
-    <th><a href="https://caintv.kesug.com/ch/801s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/235_144.png" alt="Arena"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/802s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/457_144.png" alt="Arena2"></a></th> 
-    <th><a href="https://caintv.kesug.com/ch/803s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/486_144.png" alt="Arena"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/804s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/487_144.png" alt="Arena2"></a></th> 
-    <th><a href="https://caintv.kesug.com/ch/820s.html" target="_blank"><img src="http://linear-poster.astro.com.my/prod/logo/logo_1701_v3.png"alt="EuroSport"></a></th>
-    </tr>
-    <tr>
-    <th><a href="https://caintv.kesug.com/ch/816s.html" target="_blank"><img src="https://linear-poster.astro.com.my/prod/logo/SPOTV.png" alt="SPOTV"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/810s.html" target="_blank"><img src="http://linear-poster.astro.com.my/prod/logo/SPOTV2.png"  alt="SPOTV2"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/818s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/236_144.png" alt="beIN Sports1"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/817s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/466_144.png" alt="beIN Sports2"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/819s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/313_144.png" alt="beIN Sports3"></a></th>
-    </tr>
-    <tr>
-    <th><a href="https://caintv.kesug.com/ch/811s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/154_144.png" alt="SuperSport"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/812s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/138_144.png" alt="SuperSport2"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/813s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/164_144.png" alt="SuperSport3"></a></th> 
-    <th><a href="https://caintv.kesug.com/ch/814s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/241_144.png" alt="SuperSport4"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/815s.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/503_144.png" alt="W-Sport"></a></th>
-    </tr>
-</table></center><br><br><br>
+<div id='outer-wrapper'>
+<div class='bwrapsite-content' id='bwrapcontent'>
+<div class='content-area' id='primarybwrap' itemscope='itemscope' itemtype='http://schema.org/Blog' role='main'>
+<div class='mag-wrapper'>
+<div class='animated fadeInUp no-items section' id='recent1'>
+</div>
+<div class='animated fadeInUp no-items section' id='recent2'>
+</div>
+<div class='animated fadeInUp no-items section' id='adpost2'></div>
+<div class='animated fadeInUp no-items section' id='recent3'>
+</div>
+<div class='animated fadeInUp no-items section' id='recent4'>
+</div>
+</div>
 
 
 	<center><h2 style="color:#f1f1f1;">Astro Sports</h2></center>
