--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
   text-decoration: none;
   font-size: 18px; 
   line-height: 25px;
-  border-radius: 20px;
+  border-radius: 4px;
 }
 
 .header a.logo {
@@ -138,7 +138,7 @@ footer {
 	
 <style>
 th, td {
-  border-style:ridge;
+  border-style:outset;
   border-color: #a67b5b;#696969
 }
 </style>
@@ -188,25 +188,23 @@ th, td {
   <tr>
     <th><a href="https://caintv.kesug.com/ch/801.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/235_144.png" alt="Arena"></a></th>
     <th><a href="https://caintv.kesug.com/ch/802.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/457_144.png" alt="Arena2"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/811.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/154_144.png" alt="SuperSport 1 Astro"></a></th>  
+    <th><a href="https://caintv.kesug.com/ch/811.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/154_144.png" alt="SuperSport 1 Astro"></a></th>
+	  
     <th><a href="https://caintv.kesug.com/ch/813.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/164_144.png" alt="SuperSport3"></a></th>
     <th><a href="https://caintv.kesug.com/ch/814.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/241_144.png" alt="SuperSport4"></a></th>
-    </tr>
-    <tr>
-    
+    <th><a href="https://caintv.kesug.com/ch/805.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/308_144.png" alt="SuperSport UHD"></a></th>
     <th><a href="https://caintv.kesug.com/ch/816.html" target="_blank"><img src="http://linear-poster.astro.com.my/prod/logo/SPOTV.png" alt="SPOTV"></a></th>
     <th><a href="https://caintv.kesug.com/ch/810.html" target="_blank"><img src="http://linear-poster.astro.com.my/prod/logo/SPOTV2.png" alt="SPOTV2"></a></th>
     <th><a href="https://caintv.kesug.com/ch/818.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/236_144.png" alt="beIN Sports1"></a></th>
     <th><a href="https://caintv.kesug.com/ch/817.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/466_144.png" alt="beIN Sports2"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/819.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/313_144.png" alt="beIN Sports3"></a></th>
-    </tr>
-    <tr>    
-    <th><a href="https://caintv.kesug.com/ch/805.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/308_144.png" alt="SuperSport UHD"></a></th>
+    
+  </tr>
+  <tr>    <th><a href="https://caintv.kesug.com/ch/819.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/313_144.png" alt="beIN Sports3"></a></th>
     <th><a href="https://caintv.kesug.com/ch/815.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/503_144.png" alt="W-Sport"></a></th>
     <th><a href="https://caintv.kesug.com/ch/820.html" target="_blank"><img src="http://linear-poster.astro.com.my/prod/logo/logo_1701_v3.png" alt="EuroSport"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/821.html" target="_blank"><img src="https://shorturl.at/bhkzT" alt="TVSUKAN"></a></th>   >
-    <th><a href="https://caintv.kesug.com/ch/822.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/189_144.png" alt="Unifi Sports 1"></a></th>
-    <th><a href="https://caintv.kesug.com/ch/823.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/393_144.png" alt="Unifi Sports 2"></a></th>
+    <th><a href="https://caintv.kesug.com/ch/821.html" target="_blank"><img src="https://shorturl.at/bhkzT" alt="TVSUKAN" width="150"></a></th>   </tr>  <tr>
+    <th><a href="https://caintv.kesug.com/ch/822.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/189_144.png" alt="Unifi Sports 1" width="150"></a></th>
+    <th><a href="https://caintv.kesug.com/ch/823.html" target="_blank"><img src="https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/393_144.png" alt="Unifi Sports 2" width="150"></a></th>
     </tr>
 </table></center><br><br><br>
 
